implemented many changes game works

--- a/game.html
+++ b/game.html
@@ -10,7 +10,7 @@
 
 <!-- <body onload="startGame()"> -->
 <body>
-
+<h1 id = "timer" align = "center" ></h1>
   <div class = "place">
     <canvas id="canvas" width="812" height="580"></canvas>
   </div>
