--- a/gameOver.html
+++ b/gameOver.html
@@ -9,7 +9,7 @@
 
 
 <body>
-  <h1>PAUL'S SPACE EXPLORATION</h1>
+  <h1>GAME OVER</h1>
   <div class="space">
     <img src="../game/images/astronaut.png" class="size">
   </div>
@@ -17,16 +17,11 @@
     <canvas id="canvas" width="812" height="480"></canvas>
   </div> -->
   <div style="text-align:center; margin: 50px 0px;">
-    <button class="start-btn"><a href = "./game.html">START GAME</a></button>
+    <button class="start-btn"><a href = "./game.html">PLAY AGAIN?</a></button>
   </div>
-  <div class = "box">
-    <div class = "intro">
-      <h2>The Controls</h2>
-      <p>Use the arrow keys to nagivate Paul through space, but be careful there are asteroids flying everywhere <img src= "./images/asteroid.png" class = "asteroid"></p>
-   </div> 
-  </div>
+  <h2></h2>
+  <p></p>
   <script type="text/javascript" src="canvas.js"></script>
   <!-- <script type="text/javascript" src="merp.js"></script> -->
 </body>
 </html>
-
