Game components work, css needs work

--- a/index.HTML
+++ b/index.HTML
@@ -10,20 +10,26 @@
 
 <body>
   <h1>PAUL'S SPACE EXPLORATION</h1>
-  <div class="space">
-    <img src="../game/images/astronaut.png" class="size">
+  <div class = "container">
+    <div class = "intro">
+      <h2>The Controls</h2>
+      <p>Use the arrow keys to nagivate Paul through space <br> <img src = "./images/Arrow_Keys.png" class = "keys"></p> 
+      <p>Be careful there are asteroids flying everywhere! <br><img src= "./images/asteroid.png" class = "asteroid"></p>
+    </div>
+    <div class="space">
+      <img src="../game/images/astronaut.png" class="size">
+    </div>
+    <div class = "intro2">
+      <h2>The Objective</h2>
+      <p>Paul's spaceship is on the other side of the galaxy!<br><img src = "./images/rocket.png" class = "ship"></p>
+      <p>You only have 30 seconds to help get Paul to his spaceship before the time runs out!<br><img src = "./images/giphy.gif" class = "alarm"></p> 
+   </div> 
   </div>
   <!-- <div class = "place">
     <canvas id="canvas" width="812" height="480"></canvas>
   </div> -->
   <div style="text-align:center; margin: 50px 0px;">
     <button class="start-btn"><a href = "./game.html">START GAME</a></button>
-  </div>
-  <div class = "box">
-    <div class = "intro">
-      <h2>The Controls</h2>
-      <p>Use the arrow keys to nagivate Paul through space, but be careful there are asteroids flying everywhere <img src= "./images/asteroid.png" class = "asteroid"></p>
-   </div> 
   </div>
   <script type="text/javascript" src="canvas.js"></script>
   <!-- <script type="text/javascript" src="merp.js"></script> -->
