--- a/youWin.html
+++ b/youWin.html
@@ -9,16 +9,21 @@
 
 
 <body>
-  <h1>GAME OVER</h1>
-  <div class="space">
-    <img src="../game/images/astronaut.png" class="size">
-  </div>
-  <div class = "exit">Oh No, an asteroid got you!</div>
+  <h1>YOU WON!</h1>
+  <div class = "container2">
+    <div class="space">
+        <img src="../game/images/astronaut.png" class="size">
+    </div>
+    <div class = "space">
+        <img src="../game/images/rocket.png" class="spaceship">
+    </div>
+  </div>  
+    <div class = "exit">You helped Paul travel through space to find his spaceship!</div>
   <!-- <div class = "place">
     <canvas id="canvas" width="812" height="480"></canvas>
   </div> -->
   <div style="text-align:center; margin: 50px 0px;">
-    <button class="start-btn"><a href = "./game.html">PLAY AGAIN?</a></button>
+    <button class="start-btn"><a href = "./game.html">PLAY AGAIN</a></button>
   </div>
   <h2></h2>
   <p></p>
